# MCLan

./: .gitignore  GUIDE.md  LICENSE  README.md  mclan.ps1  pyproject.toml  start.bat  start.sh
.github/workflows/: build.yml
mclan/: __init__.py  __main__.py  cli.py  download.py  environment.py  launcher.py  manifest.py  server.py  wizard.py
tests/: test_mclan.py
